--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     
     - name: Build
       run: |
-        npm install
+        npm ci
         npm run build
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.5
